--- a/src/index.css
+++ b/src/index.css
@@ -53,4 +53,4 @@ button:focus {
 }
 
 /* disable scrolling */
-body {margin: 0; height: 100%; overflow: hidden}
+html, body {margin: 0; height: 100%; overflow: hidden}
